--- a/public/500.html
+++ b/public/500.html
@@ -4,63 +4,52 @@
   <title>We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
+  .deboard-500-page {
+    background-color: #035d79cc;
+    color: #4060FC;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
   }
 
-  .rails-default-error-page div.dialog {
+  .deboard-500-page div.dialog {
     width: 95%;
     max-width: 33em;
     margin: 4em auto 0;
   }
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  .deboard-500-page div.dialog > div {
+    background-color: #FEDA02;
+    border: 6px solid #012d3af1;
+    border-radius: 8px;
+    border-style: groove;
   }
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
+  .deboard-500-page h1,h2 {
+    color: #F93871;
   }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  img {
+    border: 2px solid #8A0AB7;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    transform: translateY(5px);
   }
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="deboard-500-page">
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>
+        Error 5<img src="https://avatars.dicebear.com/api/bottts/282124.png?b=%23000d50&r=50&size=60&scale=85"><img src="https://avatars.dicebear.com/api/bottts/552124.png?b=%23000d50&r=50&size=60&scale=85">
+      </h1>
+
+      <h2>Our apologies for making this mess.</h2>
+      <p>Get rid of that awkward silence by playing de.bored games!</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
