minor wording chagne

--- a/public/404.html
+++ b/public/404.html
@@ -47,7 +47,7 @@
         Error 4<img src="https://avatars.dicebear.com/api/bottts/7992390.png?b=%23000d50&r=50&size=60&scale=85&flip=0">4
       </h1>
       <i href="https://avatars.dicebear.com/api/bottts/7992390.png?b=%23000d50&r=50&size=60&scale=85&flip=0"></i>
-      <h2>You visited a page that don't exist.</h2>
+      <h2>You visited a page that does not exist.</h2>
       <p>Go find a de.bored game to say goodbye to that awkward silence!</p>
     </div>
   </div>
